# lattice_vocabulary

./: .gitignore  LIMINAL_STAIRCASE_ASSESSMENT.md  README.md  analyze_cantor_coverage.py  cardinal_design.py  cm_validator.py  crystal_builder.py  export.py  geometric_vocab.py  hf_upload.py  lattice_compiler.py  pretrained_geometric_vocab.py  pyproject.toml  requirements.txt  run_crystalization.py  setup_ide.py  symbolic_lattice_formula_map.md  test.py  warp_field.py
older/: crystal_builder.py  hf_upload.py  lattice_compiler.py  special_crystals.py  specials.py  symbolic_tokenizer.py  word_loader.py
older/overengineered/: formula_bank.py  formula_interface.py
src/geofractal/model/david/: cantor_david_collective_clip.py  geo_david_collective.py  geo_david_collective_clip.py
src/geovocab/: __init__.py  example.py  geometric_vocab.py  pretrained_geometric_vocab.py  trained_vocab.py  vocab_bank.py
src/geovocab2/: __init__.py  defaults.py  pretrained_vocab.py  seed_generator.py  vocab.py
src/geovocab2/data/: cache.py  dataloader.py  trie.py
src/geovocab2/data/prompt/: booru_synthesizer.py  bulk_caption_data.py  caption_base.py  symbolic_caption_synthesizer.py  symbolic_tree.py  symbolic_tree_usage.txt  synthesizer.py  synthesizer_usage.txt
src/geovocab2/data/teacher/: extract.py  extract_sd15.py  extract_sd15_symbolic_captions.py
src/geovocab2/docs/: david.md
src/geovocab2/fusion/: __init__.pyi  composition_base.py  lexical_simplex_synthesizer.py  wordnet_synthesizer.py
src/geovocab2/pipelines/: pipeline_base.py
src/geovocab2/proofs/: Cantor_Gelu_+_Dropout_Experiment_Notes_12_1_2025.ipynb  beatrix_rope.py  beatrix_staircase.py  cantor_gelu_triton.py  cantor_steps_experiments.md  cantor_steps_experiments_11_28_25.ipynb  fractal_experiments_11_30_2025.ipynb  fractal_wormhole_experiments_11_30_2025.md  topological_dropout.py
src/geovocab2/shapes/: __init__.py  factory.py  legacy_shape_factory.py  shape.py  utils.py  vocab.py
src/geovocab2/shapes/factory/: __init__.py  __init__.pyi  cantor_route_factory.py  constellation_factory.py  factory_base.py  factory_dataloader.py  fractal_factory.py  legacy_factory.py  shape_factory.py  simplex_factory.py  summary_factory.py
src/geovocab2/shapes/formula/: __init__.py  __init__.pyi  formula_bank.py  formula_base.py  formula_interface.py  registry.py  test.py
src/geovocab2/shapes/tensor/: shape.py  shape_factory.py
src/geovocab2/tools/: generate_stubs.py
src/geovocab2/train/: __init__.py  train_base.py  train_classifier.py  train_epoch.py
src/geovocab2/train/config/: config_base.py  config_train_epoch.py  david_config.py  pentachoron_flow.py
tests/: big_probe_v2.py  probe_v2.py  test_import.py
tests/v2/: test_import.py
(+133 files in other folders)
