[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometricvocab"
version = "0.1.2"
description = "Deterministic geometric vocabulary and model dump for geometric models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "AbstractPhil", email = "abstractpowered@outlook.com" }]
keywords = ["vocabulary", "geometry", "nlp", "symbolic", "embeddings", "pentachoron", "deterministic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.23",
  "datasets>=2.15",
  "torch>=2.1",  # Move torch to main deps since formulas require it
]

[project.urls]
Homepage = "https://huggingface.co/AbstractPowered"
Repository = "https://github.com/AbstractEyes/lattice_vocabulary"
Issues = "https://github.com/AbstractEyes/lattice_vocabulary/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]